# unicorn-binance-websocket-api

./: .coveragerc  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TODO.md  binance_chain_websocket_best_practice.py  binance_websocket_api_futures.py  binance_websocket_api_spot.py  codecov.yml  create_wheel.sh  demo.py  dev_close_event_loop.py  dev_live_demo.py  dev_test.py  dev_test_binance_futures.py  dev_test_callback.py  dev_test_cex_all.py  dev_test_cex_full.py  dev_test_cex_full_non_stop.py  dev_test_cex_how_much_items_are_possible.py  dev_test_cex_stream_everything.py  dev_test_cex_subscribe.py  dev_test_cex_too_long_uri_test.py  dev_test_dex.py  dev_test_dex_print.py  dev_test_dex_subscribe.py  dev_test_errors.py  dev_test_full.py  dev_test_full_non_stop.py  dev_test_heartbeat.py  dev_test_issue_131.py  dev_test_issue_131_xilopaint.py  dev_test_license.py  (+79 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  issue_template.md  something_else.md
.github/archive/: unit-tests_new.yml
.github/workflows/: build_conda.yml  build_wheels.yml  codecov.yml  codeql-analysis.yml  python-app.yml  unit-tests.yml
dev/: link_lib.sh  reset.sh  set_version.py  set_version_config.txt  test_async_callback.py  test_async_loop.py  test_async_queue.py  test_async_queue2.py  test_binance_futures.py  test_callback.py  test_cex_full.py  test_cex_full_non_stop.py  test_cex_subscribe.py  test_clean_up_stopped_streams.py  test_dex.py  test_dex_print.py  test_dex_subscribe.py  test_license.py  test_live_demo.py  test_stream_signals.py  test_subscription_limit.py  test_userdata.py  test_websocket_api.py  test_websocket_api_orders.py  test_websocket_api_speed.py  unlink_lib.sh
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/tools/: find_max_websocket_uri_length.py  test_endpoint.py
docs/: .buildinfo  .buildinfo.bak  CHANGELOG.html  CNAME  README.html  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  readme.md  search.html  searchindex.js  security.html  unicorn_binance_websocket_api.html
docs/_modules/: index.html
docs/_sources/: CHANGELOG.md.txt  README.md.txt  changelog.md.txt  copyright.rst.txt  index.rst.txt  license.rst.txt  readme.md.txt  readme.rst.txt  unicorn_binance_websocket_api.rst.txt
docs/_static/: classic.css  copybutton.js  corlab.css  documentation_options.js  menu.js  multi.js  pd.css  pd.js  pydoctheme.css  searchbox.html  sidebar.js  sunpy_style.css  version.js
docs/html/: .buildinfo  README.html  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  unicorn_binance_websocket_api.html
docs/source/: conf.py  index.rst
examples/: README.md
examples/_archive/: README.md  example_apache_kafka.py  example_binance_dex.py  example_binance_futures_1s.py  example_binance_us.py  example_ctrl-c.py  example_demo.py  example_kline_1m_with_unicorn_fy.py  example_multiple_userdata_streams.py  example_pandas_ta-lib.py  example_stream_buffer.py  example_stream_buffer_extended.py  example_stream_everything.py  example_stream_management.py  example_subscribe.py  example_trade_stream.py  example_trbinance_com.py  example_userdata_stream.py  example_userdata_stream_new_style.py  example_version_of_this_package.py
examples/binance_chain_websocket_best_practice/: README.md  binance_chain_websocket_best_practice.py
examples/binance_futures_websocket_best_practice/: README.md  binance_futures_websocket_best_practice.py
examples/binance_websocket_apache_kafka/: README.md  apache_kafka_consumer.py  binance_websocket_apache_kafka.py  binance_websocket_apache_kafka_consumer.py  requirements.txt
examples/binance_websocket_api_futures/: README.md  binance_websocket_api_futures.py  requirements.txt
examples/binance_websocket_api_spot/: .env-example  README.md  binance_websocket_api_spot.py
examples/binance_websocket_best_practice/: README.md  binance_websocket_best_practice.py
examples/binance_websocket_kline_1m_ohlcv/: README.md  binance_websocket_kline_1m_ohlcv.py  requirements.txt
examples/binance_websocket_kline_1m_ohlcv_to_sqlite/: README.md  binance_websocket_kline_1m_ohlcv_to_sqlite.py
examples/binance_websocket_spot_userdata_async/: README.md  binance_websocket_spot_userdata_async.py
examples/binance_websocket_stream_signals/: README.md  (+1 more)
ipynb/: First steps.ipynb  First_steps.ipynb  README.md
pypi/: create_test_wheel.sh  create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh  install_sphinx.sh  release_docs.sh  release_docs_mac.sh
tools/: check_binance_websocket_api_manager  find_max_websocket_uri_length.py  get_used_module_version.py  install_rust.sh  start_code_review.sh  test_max_websocket_uri_length.py  test_websocket_uri_length.py  tidyup.sh  travis_telegram_notification.sh
unicorn_binance_websocket_api/: __init__.py  api.py  connection.py  connection_old.py  connection_settings.py  connection_settings_backup.py  exceptions.py  licensing_exceptions.py  licensing_manager.py  manager.py  manager_old.py  restclient.py  restclient_backup.py  restserver.py  socket.py  sockets.py  sockets_old.py  unicorn_binance_websocket_api_connection.py  unicorn_binance_websocket_api_exceptions.py  unicorn_binance_websocket_api_manager.py  unicorn_binance_websocket_api_restclient.py  unicorn_binance_websocket_api_restserver.py  unicorn_binance_websocket_api_socket.py  unicorn_fy.py  ws_api.py  ws_connection_settings.py
(+94 files in other folders)
